src/spade/query/quickgrail/parser/DSLParser.java
// Generated from DSL.g4 by ANTLR 4.7

package spade.query.quickgrail.parser;

import spade.query.quickgrail.types.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TOKEN_COMMA=1, TOKEN_DOT=2, TOKEN_SEMICOLON=3, TOKEN_LPAREN=4, TOKEN_RPAREN=5, 
		TOKEN_PLUS=6, TOKEN_MINUS=7, TOKEN_INTERSECT=8, TOKEN_OR=9, TOKEN_AND=10, 
		TOKEN_NOT=11, TOKEN_LIKE=12, TOKEN_EQUAL=13, TOKEN_NOT_EQUAL=14, TOKEN_REGEX=15, 
		TOKEN_ASSIGN=16, TOKEN_PLUS_ASSIGN=17, TOKEN_MINUS_ASSIGN=18, TOKEN_INTERSECT_ASSIGN=19, 
		TOKEN_NAME=20, TOKEN_NUMBER=21, TOKEN_SINGLE_QUOTED_STRING_LITERAL=22, 
		TOKEN_DOUBLE_QUOTED_NAME=23, TOKEN_GRAPH_VARIABLE=24, TOKEN_GRAPH_METADATA_VARIABLE=25, 
		TOKEN_COMMENTS=26, TOKEN_WS=27;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_expression = 2, RULE_or_expression = 3, 
		RULE_and_expression = 4, RULE_not_expression = 5, RULE_comparison_expression = 6, 
		RULE_add_expression = 7, RULE_intersect_expression = 8, RULE_function_call = 9, 
		RULE_factor = 10, RULE_argument_list = 11, RULE_name = 12, RULE_variable = 13, 
		RULE_literal = 14;
	public static final String[] ruleNames = {
		"program", "statement", "expression", "or_expression", "and_expression", 
		"not_expression", "comparison_expression", "add_expression", "intersect_expression", 
		"function_call", "factor", "argument_list", "name", "variable", "literal"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "','", "'.'", "';'", "'('", "')'", "'+'", "'-'", "'&'", null, null, 
		null, null, "'=='", null, null, "'='", "'+='", "'-='", "'&='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "TOKEN_COMMA", "TOKEN_DOT", "TOKEN_SEMICOLON", "TOKEN_LPAREN", "TOKEN_RPAREN", 
		"TOKEN_PLUS", "TOKEN_MINUS", "TOKEN_INTERSECT", "TOKEN_OR", "TOKEN_AND", 
		"TOKEN_NOT", "TOKEN_LIKE", "TOKEN_EQUAL", "TOKEN_NOT_EQUAL", "TOKEN_REGEX", 
		"TOKEN_ASSIGN", "TOKEN_PLUS_ASSIGN", "TOKEN_MINUS_ASSIGN", "TOKEN_INTERSECT_ASSIGN", 
		"TOKEN_NAME", "TOKEN_NUMBER", "TOKEN_SINGLE_QUOTED_STRING_LITERAL", "TOKEN_DOUBLE_QUOTED_NAME", 
		"TOKEN_GRAPH_VARIABLE", "TOKEN_GRAPH_METADATA_VARIABLE", "TOKEN_COMMENTS", 
		"TOKEN_WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DSL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	  private static String StripQuotedStringLiteral(String input) {
	    StringBuilder sb = new StringBuilder();
	    for (int i = 1; i < input.length() - 1; ++i) {
	      char c = input.charAt(i);
	      if (c == '\\') {
	        char ec = input.charAt(++i);
	        switch (ec) {
	          case 'b':
	            // Backslash.
	            sb.append('\b');
	            break;
	          case 'n':
	            // Newline.
	            sb.append('\n');
	            break;
	          case 'r':
	            // Carriage return.
	            sb.append('\r');
	            break;
	          case 't':
	            // Tab.
	            sb.append('\t');
	            break;
	          default:
	            sb.append(ec);
	            break;
	        }
	      } else {
	        sb.append(c);
	      }
	    }
	    return sb.toString();
	  }

	public DSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ParseProgram r;
		public StatementContext h;
		public StatementContext t;
		public TerminalNode EOF() { return getToken(DSLParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> TOKEN_SEMICOLON() { return getTokens(DSLParser.TOKEN_SEMICOLON); }
		public TerminalNode TOKEN_SEMICOLON(int i) {
			return getToken(DSLParser.TOKEN_SEMICOLON, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{

			  ((ProgramContext)_localctx).r =  new ParseProgram(0, 0);

			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TOKEN_NAME) | (1L << TOKEN_DOUBLE_QUOTED_NAME) | (1L << TOKEN_GRAPH_VARIABLE) | (1L << TOKEN_GRAPH_METADATA_VARIABLE))) != 0)) {
				{
				setState(31);
				((ProgramContext)_localctx).h = statement();

				    _localctx.r.addStatement(((ProgramContext)_localctx).h.r);
				  
				setState(39);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(33);
						match(TOKEN_SEMICOLON);
						setState(34);
						((ProgramContext)_localctx).t = statement();

						      _localctx.r.addStatement(((ProgramContext)_localctx).t.r);
						    
						}
						} 
					}
					setState(41);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TOKEN_SEMICOLON) {
					{
					setState(42);
					match(TOKEN_SEMICOLON);
					}
				}

				}
			}

			setState(47);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ParseStatement r;
		public VariableContext v;
		public Token t;
		public ExpressionContext e;
		public NameContext n;
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode TOKEN_ASSIGN() { return getToken(DSLParser.TOKEN_ASSIGN, 0); }
		public TerminalNode TOKEN_PLUS_ASSIGN() { return getToken(DSLParser.TOKEN_PLUS_ASSIGN, 0); }
		public TerminalNode TOKEN_MINUS_ASSIGN() { return getToken(DSLParser.TOKEN_MINUS_ASSIGN, 0); }
		public TerminalNode TOKEN_INTERSECT_ASSIGN() { return getToken(DSLParser.TOKEN_INTERSECT_ASSIGN, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			setState(66);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TOKEN_GRAPH_VARIABLE:
			case TOKEN_GRAPH_METADATA_VARIABLE:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				((StatementContext)_localctx).v = variable();
				setState(50);
				((StatementContext)_localctx).t = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TOKEN_ASSIGN) | (1L << TOKEN_PLUS_ASSIGN) | (1L << TOKEN_MINUS_ASSIGN) | (1L << TOKEN_INTERSECT_ASSIGN))) != 0)) ) {
					((StatementContext)_localctx).t = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(51);
				((StatementContext)_localctx).e = expression();

				  ((StatementContext)_localctx).r =  new ParseAssignment(((StatementContext)_localctx).v.r.getLineNumber(), ((StatementContext)_localctx).v.r.getColumnNumber(),
				                           ParseAssignment.ResolveAssignmentType((((StatementContext)_localctx).t!=null?((StatementContext)_localctx).t.getText():null)),
				                           ((StatementContext)_localctx).v.r, ((StatementContext)_localctx).e.r);

				}
				break;
			case TOKEN_NAME:
			case TOKEN_DOUBLE_QUOTED_NAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				((StatementContext)_localctx).n = name();

				  ParseCommand command =
				      new ParseCommand(((StatementContext)_localctx).n.r.getLineNumber(), ((StatementContext)_localctx).n.r.getColumnNumber(), ((StatementContext)_localctx).n.r.getName());

				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TOKEN_LPAREN) | (1L << TOKEN_NOT) | (1L << TOKEN_NAME) | (1L << TOKEN_NUMBER) | (1L << TOKEN_SINGLE_QUOTED_STRING_LITERAL) | (1L << TOKEN_DOUBLE_QUOTED_NAME) | (1L << TOKEN_GRAPH_VARIABLE) | (1L << TOKEN_GRAPH_METADATA_VARIABLE))) != 0)) {
					{
					{
					setState(56);
					((StatementContext)_localctx).e = expression();

					    command.addArgument(((StatementContext)_localctx).e.r);
					  
					}
					}
					setState(63);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}

				  ((StatementContext)_localctx).r =  command;

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ParseExpression r;
		public Add_expressionContext add_expression;
		public Or_expressionContext or_expression;
		public Add_expressionContext add_expression() {
			return getRuleContext(Add_expressionContext.class,0);
		}
		public Or_expressionContext or_expression() {
			return getRuleContext(Or_expressionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expression);
		try {
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				((ExpressionContext)_localctx).add_expression = add_expression();

				  ((ExpressionContext)_localctx).r =  ((ExpressionContext)_localctx).add_expression.r;

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				((ExpressionContext)_localctx).or_expression = or_expression();

				  ((ExpressionContext)_localctx).r =  ((ExpressionContext)_localctx).or_expression.r;

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Or_expressionContext extends ParserRuleContext {
		public ParseExpression r;
		public And_expressionContext lhs;
		public Token t;
		public And_expressionContext rhs;
		public List<And_expressionContext> and_expression() {
			return getRuleContexts(And_expressionContext.class);
		}
		public And_expressionContext and_expression(int i) {
			return getRuleContext(And_expressionContext.class,i);
		}
		public List<TerminalNode> TOKEN_OR() { return getTokens(DSLParser.TOKEN_OR); }
		public TerminalNode TOKEN_OR(int i) {
			return getToken(DSLParser.TOKEN_OR, i);
		}
		public Or_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_or_expression; }
	}

	public final Or_expressionContext or_expression() throws RecognitionException {
		Or_expressionContext _localctx = new Or_expressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_or_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			((Or_expressionContext)_localctx).lhs = and_expression();

			  ((Or_expressionContext)_localctx).r =  ((Or_expressionContext)_localctx).lhs.r;

			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TOKEN_OR) {
				{
				{
				setState(78);
				((Or_expressionContext)_localctx).t = match(TOKEN_OR);
				setState(79);
				((Or_expressionContext)_localctx).rhs = and_expression();

				    ParseString operator =
				        new ParseString(((Or_expressionContext)_localctx).t.getLine(), ((Or_expressionContext)_localctx).t.getCharPositionInLine(), (((Or_expressionContext)_localctx).t!=null?((Or_expressionContext)_localctx).t.getText():null));
				    ParseOperation operation =
				        new ParseOperation(((Or_expressionContext)_localctx).t.getLine(), ((Or_expressionContext)_localctx).t.getCharPositionInLine(), null, operator);
				    operation.addOperand(_localctx.r);
				    operation.addOperand(((Or_expressionContext)_localctx).rhs.r);
				    ((Or_expressionContext)_localctx).r =  operation;
				  
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class And_expressionContext extends ParserRuleContext {
		public ParseExpression r;
		public Not_expressionContext lhs;
		public Token t;
		public Not_expressionContext rhs;
		public List<Not_expressionContext> not_expression() {
			return getRuleContexts(Not_expressionContext.class);
		}
		public Not_expressionContext not_expression(int i) {
			return getRuleContext(Not_expressionContext.class,i);
		}
		public List<TerminalNode> TOKEN_AND() { return getTokens(DSLParser.TOKEN_AND); }
		public TerminalNode TOKEN_AND(int i) {
			return getToken(DSLParser.TOKEN_AND, i);
		}
		public And_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_and_expression; }
	}

	public final And_expressionContext and_expression() throws RecognitionException {
		And_expressionContext _localctx = new And_expressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_and_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			((And_expressionContext)_localctx).lhs = not_expression();

			  ((And_expressionContext)_localctx).r =  ((And_expressionContext)_localctx).lhs.r;

			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TOKEN_AND) {
				{
				{
				setState(89);
				((And_expressionContext)_localctx).t = match(TOKEN_AND);
				setState(90);
				((And_expressionContext)_localctx).rhs = not_expression();

				    ParseString operator =
				        new ParseString(((And_expressionContext)_localctx).t.getLine(), ((And_expressionContext)_localctx).t.getCharPositionInLine(), (((And_expressionContext)_localctx).t!=null?((And_expressionContext)_localctx).t.getText():null));
				    ParseOperation operation =
				        new ParseOperation(((And_expressionContext)_localctx).t.getLine(), ((And_expressionContext)_localctx).t.getCharPositionInLine(), null, operator);
				    operation.addOperand(_localctx.r);
				    operation.addOperand(((And_expressionContext)_localctx).rhs.r);
				    ((And_expressionContext)_localctx).r =  operation;
				  
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Not_expressionContext extends ParserRuleContext {
		public ParseExpression r;
		public Token t;
		public Comparison_expressionContext c;
		public Function_callContext f;
		public Comparison_expressionContext comparison_expression() {
			return getRuleContext(Comparison_expressionContext.class,0);
		}
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public TerminalNode TOKEN_NOT() { return getToken(DSLParser.TOKEN_NOT, 0); }
		public Not_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_not_expression; }
	}

	public final Not_expressionContext not_expression() throws RecognitionException {
		Not_expressionContext _localctx = new Not_expressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_not_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			  ParseString operator = null;
			  ParseExpression operand = null;

			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TOKEN_NOT) {
				{
				setState(99);
				((Not_expressionContext)_localctx).t = match(TOKEN_NOT);

				    operator = new ParseString(((Not_expressionContext)_localctx).t.getLine(), ((Not_expressionContext)_localctx).t.getCharPositionInLine(), (((Not_expressionContext)_localctx).t!=null?((Not_expressionContext)_localctx).t.getText():null));
				  
				}
			}

			setState(109);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(103);
				((Not_expressionContext)_localctx).c = comparison_expression();

				  	operand = ((Not_expressionContext)_localctx).c.r;
				  
				}
				break;
			case 2:
				{
				setState(106);
				((Not_expressionContext)_localctx).f = function_call();

				  	operand = ((Not_expressionContext)_localctx).f.r;
				  
				}
				break;
			}

			  if (operator == null) {
			    ((Not_expressionContext)_localctx).r =  operand;
			  } else {
			    ParseOperation operation =
			        new ParseOperation(((Not_expressionContext)_localctx).t.getLine(), ((Not_expressionContext)_localctx).t.getCharPositionInLine(), null, operator);
			    operation.addOperand(operand);
			    ((Not_expressionContext)_localctx).r =  operation;
			  }

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Comparison_expressionContext extends ParserRuleContext {
		public ParseExpression r;
		public Add_expressionContext lhs;
		public Token n;
		public Token t;
		public Add_expressionContext rhs;
		public List<Add_expressionContext> add_expression() {
			return getRuleContexts(Add_expressionContext.class);
		}
		public Add_expressionContext add_expression(int i) {
			return getRuleContext(Add_expressionContext.class,i);
		}
		public TerminalNode TOKEN_LIKE() { return getToken(DSLParser.TOKEN_LIKE, 0); }
		public TerminalNode TOKEN_EQUAL() { return getToken(DSLParser.TOKEN_EQUAL, 0); }
		public TerminalNode TOKEN_ASSIGN() { return getToken(DSLParser.TOKEN_ASSIGN, 0); }
		public TerminalNode TOKEN_NOT_EQUAL() { return getToken(DSLParser.TOKEN_NOT_EQUAL, 0); }
		public TerminalNode TOKEN_REGEX() { return getToken(DSLParser.TOKEN_REGEX, 0); }
		public TerminalNode TOKEN_NOT() { return getToken(DSLParser.TOKEN_NOT, 0); }
		public Comparison_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparison_expression; }
	}

	public final Comparison_expressionContext comparison_expression() throws RecognitionException {
		Comparison_expressionContext _localctx = new Comparison_expressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_comparison_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			  ParseString negateOp = null;

			setState(114);
			((Comparison_expressionContext)_localctx).lhs = add_expression();
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TOKEN_NOT) {
				{
				setState(115);
				((Comparison_expressionContext)_localctx).n = match(TOKEN_NOT);
